package cn.sdu.mall.mapper;
import cn.sdu.mall.pojo.Item;
import com.baomidou.mybatisplus.core.mapper.BaseMapper;
import org.apache.ibatis.annotations.Mapper;
@Mapper
public interface ItemMapper extends BaseMapper<Item> {
}
